bugfix: moving prev and next user switcher icons behind using translate3d prevented their onclick event from firing

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -552,10 +552,10 @@ body
       opacity: 0.8
 
     li.previous
-      transform: translate3d(50px, 0px, -10px) scale(0.9)
+      transform: translate3d(50px, 0px, 0px) scale(0.9)
 
     li.next
-      transform: translate3d(-50px, 0px, -10px) scale(0.9)
+      transform: translate3d(-50px, 0px, 0px) scale(0.9)
 
     .header
       font-size: 11pt
